static/source/css/layout.scss
@import "assets/variables";

@mixin content-width {
  box-sizing: border-box;
	max-width: 1200px;
	width: 85%;
	min-width: 1002px;
}

#info button {
	cursor: pointer;
	border-radius: 10px;
	border: 0px;
	transition: background .15s ease-in-out;
  -moz-transition: background .15s ease-in-out;
  -webkit-transition: background .15s ease-in-out;
}


button:focus {
	border: none;
	outline:none;
}

.content-width {
	@include content-width;
	margin: auto;
	height: 100%;
}

.content {
	background: $white;
	@include content-width;
	margin: auto;
	padding: 5px 0;
	min-height: 400px;
	min-height: 100%;
	overflow-y: hidden;
	border: $bordercolor 1px solid;
}

.content h2 {
	width: 100%;
	text-align: center;
	margin: 0;
	line-height: 35px;
  height: 35px;
	font-size: 23px;
	background: $softcolor;
	color: $darkcolor;
}

.content .page-area {
	padding: 5px;
	overflow: hidden;
}

.container {
	width: 100%;
	float: left;
}

.notification.error {
	border: $accentborder 1px solid;
	background: $accentsoft;
	width: 98%;
	padding: 5px 1%;
	margin: 5px 0;
	border-radius: 5px;
	clear: both;
}

#logo {
	background: $softcolor;
	color: $white;
	text-align:center;
	font-size: 50px;
	font-weight: bold;
	line-height: 80px;
	font-family: 'Satisfy', cursive;
  -webkit-transform:scale(1.3, 1.0);
  -moz-transform:scale(1.3, 1.0);
  -ms-transform:scale(1.3, 1.0);
  -o-transform:scale(1.3, 1.0);
  transform:scale(1.3, 1.0);
}

#logo a, #logo a:link, #logo a:active {
	color: $maincolor;
	text-shadow: none;
	outline: 0 none;
	-webkit-transition: 500ms linear 0s;
	-moz-transition: 500ms linear 0s;
	-o-transition: 500ms linear 0s;
	transition: 500ms linear 0s;
}

#logo a:hover {
	color: $accent;
	text-decoration: none;
	-webkit-animation-delay: 1s;
  animation-delay: 1s;
  text-decoration: none;
}

#navbar {
	background: $maincolor;
	text-align: center;
	height: 40px;
}

#navbar a, #navbar a:link, #navbar a:active, #navbar a:visited {
	display: inline-block;
	padding: 0 10px;
	transition: background-color 0.5s ease;
	margin: 0 -2px;
	color: $white;
	font-size: 20px;
	line-height: 40px;
	height: 40px;
}

#navbar a:hover {
	background: $darkcolor;
	text-decoration: none;
}

#navbar form.search {
	display: inline-block;
	height: 40px;
	padding: 0 7px;
}

#navbar .search input {
	background: $softcolor;
	color: $darkcolor;
	padding: 3px 25px 3px 5px;
	height: 19px;
	width: 200px;
	border: 0;
	margin: 0;
	float: left;
	margin-top: -3px;
	transition: background-color 0.5s ease;
}

#navbar .search input:focus {
	background: $white;
	color: $black;
	outline: none;
	box-shadow: -1px 1px 8px #ECEB72, 1px -1px 8px #fff;
}

#navbar .search button {
	position: relative;
	top: -2px;
	margin-left: -26px;
	cursor: pointer;
	border: 0;
	background: none;
	color: $darkcolor;
	border-radius: 0;
	height: 25px;
	width: 25px;
}

// Total width should not exceed 180px
.sidebar {
	box-sizing: border-box;
	width: 180px;
	height: 100%;
	padding: 5px;
}

#ha-panel {
	background: url('../img/habg.jpg');
}

.footer {
	text-align: center;
	font-size: 14px;
}

@media (max-width: 1002px) {
	body {
		background: $softcolor;
	}

	.sidebar.right {
		display: none;
	}

	.container {
		min-width: 640px;
	}

  .content-width {
    width: 100%;
    min-width: 640px;
  }

	.content {
		border: none;
		width: 100%;
		margin: 0;
		min-width: 640px;
	}

	.content h2 {
		background: none;
	}

	.footer {
		padding: 10px 0;
	}
}

@media (max-width: 820px) {
	.sidebar {
		display: none;
	}
}

